--- a/.env.example
+++ b/.env.example
@@ -33,5 +33,10 @@ RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 SESSION_TIMEOUT_MS=3600000
 
+# Audit Configuration
+AUDIT_RETENTION_DAYS=90
+AUDIT_RETENTION_ENABLED=true
+AUDIT_CLEANUP_SCHEDULE=0 2 * * 0
+
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000
